# JustFetch

./: Cargo.toml  README.md  Xargo.toml  build.sh
.cargo/: config.toml
src/: info.rs  main.rs  parser.rs  utils.rs
