[package]
name = "just-fetch"
version = "0.1.4"
authors = [ "varsity <varsity@duck.com>" ]
description = "A simple minimal neofetch alternative"
edition = "2021"

[dependencies]
lxinfo = { git = "https://github.com/vars1ty/lxinfo.git" }
lazy-regex = "3.1.0"
colorful = "0.2.2"

[profile.release]
overflow-checks = false
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
lto = "fat"
