cargo-features = ["trim-paths"]

[package]
name = "just-fetch"
version = "0.1.4"
authors = [ "varsity <varsity@duck.com>" ]
description = "A simple minimal neofetch alternative"
edition = "2021"

[dependencies]
lxinfo = { git = "https://github.com/vars1ty/lxinfo.git" }
regex-lite = "0.1.6"
colorful = "0.3.2"

[profile.release]
overflow-checks = false
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
