cargo-features = ["trim-paths"]

[package]
name = "just-fetch"
version = "0.1.5"
authors = ["varsity <vrs@resistant.ch>"]
description = "A simple minimal fetching program made for Linux"
edition = "2024"

[dependencies]
lxinfo = { git = "https://github.com/vars1ty/lxinfo.git" }
regex-lite = "0.1.6"
colorful = "0.3.2"
lexical = "7.0.4"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
